<resources>

    <string-array name="group_name">
        <item>건국대학교</item>
        <item>동국대학교</item>
        <item>한양대학교</item>
    </string-array>
    <string-array name="area_name">
        <item>서울</item>
        <item>경기</item>
    </string-array>
    <string-array name="day_array">
        <item>1일</item>
        <item>2일</item>
        <item>3일</item>
        <item>4일</item>
        <item>5일</item>
        <item>6일</item>
        <item>7일</item>
        <item>8일</item>
        <item>9일</item>
        <item>10일</item>
        <item>11일</item>
        <item>12일</item>
        <item>13일</item>
        <item>14일</item>
        <item>15일</item>
        <item>16일</item>
        <item>17일</item>
        <item>18일</item>
        <item>19일</item>
        <item>20일</item>
        <item>21일</item>
        <item>22일</item>
        <item>23일</item>
        <item>24일</item>
        <item>25일</item>
        <item>26일</item>
    </string-array>

    <string-array name="time_array">
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>


    </string-array>
    <string name="app_name">Flag</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="signUp">회원가입</string>
    <string name="findId">아이디 찾기</string>
    <string name="findPw">비밀번호 찾기</string>
    <string name="authPhone">휴대폰 인증</string>
    <string name="authEmail">학교 메일 인증</string>
    <string name="agreeAll">전체 동의</string>
    <string name="term1">[필수] 서비스 이용약관 동의</string>
    <string name="term2">[필수] 개인정보 처리방침 동의</string>
    <string name="term3">[필수] 커뮤니티 이용규칙 동의</string>
    <string name="term4">[필수] 본인 명의를 이용하여 회원가입을 진행합니다</string>
    <string name="term5">[선택] 광고성 정보 수신에 모두 동의합니다</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>