<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.activity.SignUpActivity">


    <TextView
            android:id="@+id/tv_signup_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"/>

    <EditText
            android:id="@+id/et_signup_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tv_signup_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_name"
            android:layout_marginTop="8dp"/>

    <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/tv_signup_id"
            app:layout_constraintStart_toStartOf="@+id/et_signup_name"
            app:layout_constraintTop_toBottomOf="@+id/et_signup_name"
            android:layout_marginTop="12dp"/>

    <EditText
            android:id="@+id/et_signup_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_signup_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_id"
            android:layout_marginTop="8dp"/>

    <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/tv_signup_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw"
            app:layout_constraintTop_toBottomOf="@+id/et_signup_email"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/et_signup_email"
            app:layout_constraintHorizontal_bias="0.089"/>

    <EditText
            android:id="@+id/et_signup_pw"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_signup_pw"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_pw"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/term1"
            android:id="@+id/tv_signup_term1"
            app:layout_constraintStart_toEndOf="@+id/cb_signup_term1"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_all"
            android:layout_marginTop="20dp"/>

    <TextView
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/term2"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_term1"
            android:id="@+id/tv_signup_term2"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toEndOf="@+id/cb_signup_term2"/>

    <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/term3"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_term2"
            android:id="@+id/tv_signup_term3"
            app:layout_constraintStart_toEndOf="@+id/cb_signup_term3"
            android:layout_marginStart="16dp"
            />

    <TextView
            android:id="@+id/tv_signup_term4"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/term4"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_term3"
            app:layout_constraintStart_toEndOf="@+id/cb_signup_term4"
            android:layout_marginStart="16dp"
            />


    <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/term5"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_term4"
            android:id="@+id/tv_signup_term5"
            app:layout_constraintStart_toEndOf="@+id/cb_signup_term5"
            android:layout_marginStart="16dp"/>


    <CheckBox
            android:id="@+id/cb_signup_all"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="@+id/tv_signup_pw"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_signup_pw"
            android:layout_marginTop="64dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/agreeAll"
            app:layout_constraintStart_toEndOf="@+id/cb_signup_all"
            android:layout_marginStart="16dp"
            android:id="@+id/tv_signup_all"
            app:layout_constraintTop_toTopOf="@+id/cb_signup_all"/>

    <CheckBox
            android:id="@+id/cb_signup_term1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@+id/cb_signup_all"
            app:layout_constraintStart_toStartOf="@+id/cb_signup_all"
            android:layout_marginTop="20dp"
            />

    <CheckBox
            android:id="@+id/cb_signup_term2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@+id/cb_signup_term1"
            app:layout_constraintStart_toStartOf="@+id/cb_signup_term1"
            android:layout_marginTop="20dp"
            />

    <CheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/cb_signup_term3"
            app:layout_constraintStart_toStartOf="@+id/cb_signup_term2"
            app:layout_constraintTop_toBottomOf="@+id/cb_signup_term2"
            android:layout_marginTop="20dp"
            />

    <CheckBox
            android:id="@+id/cb_signup_term4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cb_signup_term3"
            app:layout_constraintStart_toStartOf="@+id/cb_signup_term3"
            />

    <CheckBox
            android:id="@+id/cb_signup_term5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@+id/cb_signup_term4"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/cb_signup_term4"
            />


    <Button
            android:id="@+id/btn_signup_signup"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/signUp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/all_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_term5"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.495"/>


</androidx.constraintlayout.widget.ConstraintLayout>