<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".LoginActivity">

    <ImageView
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_flag"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="156dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>

    <EditText
            android:id="@+id/et_login_id"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="5dp"
            android:paddingStart="5dp"
            android:hint="@string/email"
            android:background="@drawable/login_id_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="96dp"/>

    <EditText
            android:id="@+id/et_login_pw"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_pw"
            android:drawablePadding="5dp"
            android:paddingStart="5dp"
            android:background="@drawable/login_pw_border"
            app:layout_constraintEnd_toEndOf="@+id/et_login_id"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_login_id"
            app:layout_constraintTop_toBottomOf="@+id/et_login_id"
            />


    <Button
            android:id="@+id/btn_login_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/all_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_pw"/>

    <TextView
            android:id="@+id/tv_login_findpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/findPw"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_login"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="@+id/btn_login_login"
            android:layout_marginEnd="20dp"/>

    <TextView
            android:id="@+id/tv_login_findid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/findId"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="@+id/btn_login_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_login"
            android:layout_marginStart="24dp"/>

    <TextView
            android:id="@+id/tv_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_findpw"
            app:layout_constraintStart_toStartOf="@+id/tv_login_findid"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginTop="32dp"/>

    <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="@color/browser_actions_divider_color"
            android:id="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/tv_login_findid"
            android:layout_marginStart="56dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_login"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_login_findpw"
            app:layout_constraintHorizontal_bias="0.06"/>

</androidx.constraintlayout.widget.ConstraintLayout>